
----------------------------------------------------------------------
--- 2006-01-XX  Release 7.7.0                                      ---
----------------------------------------------------------------------

This release marks the one year anniversary of BRL-CAD being released
as Open Source software.  Thank you to everyone for your support and
contributions.

* reid mged command, recursively assign region IDs - Sean Morrison
* remat mged command, recursively assign a material ID - Sean Morrison
* get_regions mged command, list assembly regions - Sean Morrison
* extensive Windows build support enhancements - Bob Parker
* new Archer modeling and visualization tool - Bob Parker, Doug Howard
* raytracers use image size for default aspect ratio - Sean Morrison
* fixed benchmark sqrt of negative numbers error - Sean Morrison


----------------------------------------------------------------------
--- 2005-12-15  Release 7.6.6                                      ---
----------------------------------------------------------------------

Continuing with the newly added point collection and reverse modeling
techniques provide in the previous release, this iteration improves
upon that support fixing several issues and refining the modeling
techniques.  Additionally, after more than a year of passively
researching and investigating, this release now accounts for the
majority of known contributors to BRL-CAD over the project's
existence.  This is part of an on-going effort to document the history
of BRL-CAD over the past 20 years.

* improved mged resource searching when not installed - Sean Morrison
* significant AUTHORS file updates, all names filed - Sean Morrison
* fixed sketch primitive bezier path computation bug - Sean Morrison
* cleaned up erroneous rtedge end of line output - Sean Morrison
* configure --enable/disable-everything option - Sean Morrison
* updated g_qa manual page documentation - Lee Butler